<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="136dp"
            android:layout_height="138dp"
            android:layout_margin="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/superbanklogo" />

        <EditText
            android:id="@+id/benutzername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bgedittext"
            android:ems="10"
            android:hint="@string/login_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/benutzerpin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bgedittext"
            android:ems="10"
            android:hint="@string/login_password"
            android:password="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingBottom="1.0dip"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:paddingTop="5.0dip" >
        
            <Button
                android:id="@+id/loginbutton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="1.0"
                android:background="@drawable/buttonbg"
                android:onClick="login"
                android:text="@string/login_button"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible" />
           
        </LinearLayout>
       
        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="100dp"
            android:text="@string/copyright1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="6dp"
            android:text="@string/copyright2"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>